FIX 2. Тестовое задание - проект "Pooh JMS" [#268841 #214586]